# duro-cli

./: CHANGELOG.md  README.md  pyproject.toml
.duro/: config.yaml
.github/workflows/: hardening.yml  replay.yml
docs/: ARCHITECT_REVIEW_SMART_CONTRACT_TOOLS.md  DURO_RELEASE_PLAN.md  GITHUB_ISSUES_P0_P1.md  HYBRID_AUDIT_WORKFLOW.md  P0_HARDENING_DONE.md  P1_HARDENING_DONE.md  P1_INVARIANTS.md  P2_CLI_ENFORCEMENT.md  P3_CLI_EMIT_HELPER.md  PROJECT_BOARD.md  RELEASE_NOTES_v0.1.0-alpha.md  SECURITY_AUDIT.md  START_HERE.md
duro/: __init__.py  cli.py  contracts.py  core.py  emit.py  hardening.py  http_util.py  models.py  orchestration.py  ui.py
duro/chat/: __init__.py  parser.py  registry.py  repl.py  session.py
duro/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
scenarios/: oracle-manipulation-demo.yaml
scenarios/fixtures/: expected.json
scenarios/templates/: access-control.yaml  governance-attack.yaml  oracle-manipulation.yaml  read-only-reentrancy.yaml  signature-approval.yaml  upgradeable-proxy.yaml
scripts/: ci_replay_check.py  demo_30s.sh  duro_safe.py  preflight_check.py  validate_output_contract.py
tests/: test_cli_enforcement.py  test_contract_fixture.py  test_contracts.py  test_emit.py  test_hardening.py  test_invariants.py  test_rerun_check.py
