[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duro-cli"
version = "0.1.0"
description = "DURO CLI — DeFi exploit confirmation on forked state"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.1"
]

[project.scripts]
duro = "duro.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["duro*"]
